--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./catalogue.html">Promos</a>
+                    <a class="nav-link" href="./pages/catalogue.html">Promos</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Alimentos
                     </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./catalogue.html">Perro</a></li>
+                    <li><a class="dropdown-item" href="./pages/catalogue.html">Perro</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="./catalogue.html">Gato</a></li>
+                    <li><a class="dropdown-item" href="./pages/catalogue.html">Gato</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="./catalogue.html">Humedos</a></li>
+                    <li><a class="dropdown-item" href="./pages/catalogue.html">Humedos</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./about_us.html">Sobre Nosotros</a>
+                    <a class="nav-link" href="./pages/about_us.html">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./register_login.html">Login || Register</a>
+                    <a class="nav-link" href="./pages/register_login.html">Login || Register</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contacto">Contacto</a>
